[tool.poetry]
name = "URL SHORTENER"
version = "1.0.0"
description = "This application is a URL SHORTENER."

[tool.poetry.dependencies]

python = ">=3.11"
fastapi =  "^0.100.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.282"
yamllint = "^1.32.0"

[tool.ruff]

exclude = [
    ".ruff_cache",
    ".venv",
    ".pytest_cache"
]
line-length = 88
target-version = "py311"