[tool.poetry]
name = "URL SHORTENER"
version = "1.0.0"
description = "This application is a URL SHORTENER."

authors = ["Me"]

[tool.poetry.dependencies]

python = ">=3.11"
fastapi =  "^0.100.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.0.282"
yamllint = "^1.32.0"
alembic = "^1.11.2"
psycopg2-binary = "2.9.7"

[tool.ruff]

exclude = [
    ".ruff_cache",
    ".venv",
    ".pytest_cache"
]
line-length = 88
target-version = "py311"
